# system_tools

./: .gitignore  README.md  flake.nix  pyproject.toml  usb_auto_mount.py
.github/workflows/: pytest.yml
system_tools/: common.py  snapshot_manager.py  validate_jeeves.py  validate_jeevesjr.py
system_tools/common/: __init__.py  lib.py  parallelize.py
system_tools/installer/: __main__.py  tui.py
system_tools/system_tests/: components.py  validate_jeeves.py  validate_jeevesjr.py  validate_system.py
system_tools/tools/: arch_mirror.py  snapshot_manager.py
system_tools/zfs/: __init__.py  dataset.py  zpool.py
tests/: test_code_compliance.py  test_common.py  test_components.py  test_parallelize.py  test_server_validate_scripts.py  test_snapshot_manager.py  test_zfs.py
